--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.17.2",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
